[project]
name = "linka"
version = "0.1.0"
description = "Secure Telegram file delivery gateway with sponsor and premium access checks."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Linka Contributors" }]
dependencies = [
    "aiogram>=3.7,<4.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.13,<2.0",
    "apscheduler>=3.10,<4.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "structlog>=24.1,<25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "ruff>=0.5,<1.0",
    "mypy>=1.10,<2.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["admin*", "bot*", "core*", "database*", "models*", "repositories*", "services*", "handlers*", "middlewares*", "keyboards*", "scheduler*", "utils*"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "ANN"]
ignore = ["ANN401", "E501", "UP046"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["src/tests"]
